package com.ptsecurity.appsec.ai.ee.scan.result.issue.types;

import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import lombok.experimental.SuperBuilder;

@Getter
@Setter
@SuperBuilder
@NoArgsConstructor
public class YaraMatchIssue extends BaseIssue {
}
